addon download and delete command